--- a/santana-pier-logo/v0.0.3/index.html
+++ b/santana-pier-logo/v0.0.3/index.html
@@ -18,7 +18,7 @@
                     <div class="center-line"></div>
                 </div>
                 <div class="logo-text">
-                    <h1 class="main-text light-text">SANTANA PIER</h1>
+                    <h1 class="main-text light-text"><span class="big-letter">S</span>ANTANA<span class="big-letter">P</span>IER</h1>
                     <p class="tagline light-text">FIND YOUR TREASURE</p>
                 </div>
             </div>
@@ -32,7 +32,7 @@
                     <div class="center-line"></div>
                 </div>
                 <div class="logo-text">
-                    <h1 class="main-text dark-text">SANTANA PIER</h1>
+                    <h1 class="main-text dark-text"><span class="big-letter">S</span>ANTANA<span class="big-letter">P</span>IER</h1>
                     <p class="tagline dark-text">FIND YOUR TREASURE</p>
                 </div>
             </div>
@@ -46,7 +46,7 @@
                     <div class="center-line"></div>
                 </div>
                 <div class="logo-text">
-                    <h1 class="main-text sunset-text">SANTANA PIER</h1>
+                    <h1 class="main-text sunset-text"><span class="big-letter">S</span>ANTANA<span class="big-letter">P</span>IER</h1>
                     <p class="tagline sunset-text">FIND YOUR TREASURE</p>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                     <div class="center-line"></div>
                 </div>
                 <div class="logo-text">
-                    <h1 class="main-text filled-text">SANTANA PIER</h1>
+                    <h1 class="main-text filled-text"><span class="big-letter">S</span>ANTANA<span class="big-letter">P</span>IER</h1>
                     <p class="tagline filled-text">FIND YOUR TREASURE</p>
                 </div>
             </div>
@@ -89,11 +89,11 @@
                         <div class="font-example oswald-font">
                             <div class="font-weight">
                                 <span class="weight-label">Regular</span>
-                                <p class="sample-text">SANTANA PIER FIND YOUR TREASURE</p>
+                                <p class="sample-text"><span class="big-letter">S</span>ANTANA<span class="big-letter">P</span>IER FIND YOUR TREASURE</p>
                             </div>
                             <div class="font-weight">
                                 <span class="weight-label">Bold</span>
-                                <p class="sample-text bold">SANTANA PIER FIND YOUR TREASURE</p>
+                                <p class="sample-text bold"><span class="big-letter">S</span>ANTANA<span class="big-letter">P</span>IER FIND YOUR TREASURE</p>
                             </div>
                         </div>
                     </div>
