--- a/index.html
+++ b/index.html
@@ -51,25 +51,61 @@
             box-shadow: 0 6px 20px rgba(139, 75, 75, 0.3);
         }
 
+        .version-section {
+            margin-bottom: 40px;
+            padding: 25px;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .version-section:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.15);
+        }
+
         .description {
             margin-top: 15px;
             color: #666;
             font-size: 1rem;
             line-height: 1.5;
+            max-width: 600px;
+            margin-left: auto;
+            margin-right: auto;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Logo Collection</h1>
+        <h1>Santana Pier Brand Guide</h1>
         
         <div class="logo-links">
-            <a href="santana-pier-logo/" class="logo-link">
-                View Santana Pier Logo
-            </a>
-            
-            <div class="description">
-                A clean, modern logo featuring a perfect circle with horizontal line and elegant typography using Google Fonts (Oswald & Roboto).
+            <div class="version-section">
+                <a href="https://vinicius5581.github.io/santana-pier-brand/santana-pier-logo/v0.0.2/" class="logo-link">
+                    Version 0.0.2
+                </a>
+                <div class="description">
+                    Complete brand guide with 7 sections: animated sunset logo, static variations (light/dark/sunset/filled), color palette, and typography showcase.
+                </div>
+            </div>
+
+            <div class="version-section">
+                <a href="https://vinicius5581.github.io/santana-pier-brand/santana-pier-logo/v0.0.3/" class="logo-link">
+                    Version 0.0.3
+                </a>
+                <div class="description">
+                    Enhanced typography with distinctive large S and P letters, unified "SANTANAPIER" wordmark, and improved tagline styling.
+                </div>
+            </div>
+
+            <div class="version-section">
+                <a href="santana-pier-logo/" class="logo-link">
+                    Legacy Version
+                </a>
+                <div class="description">
+                    Original clean, modern logo featuring a perfect circle with horizontal line and elegant typography using Google Fonts (Oswald & Roboto).
+                </div>
             </div>
         </div>
     </div>
