--- a/index.html
+++ b/index.html
@@ -100,6 +100,15 @@
             </div>
 
             <div class="version-section">
+                <a href="https://vinicius5581.github.io/santana-pier-brand/santana-pier-logo/v0.0.4/" class="logo-link">
+                    Version 0.0.4
+                </a>
+                <div class="description">
+                    Perfect visual alignment with center line positioned to match text hierarchy, optimized spacing, enhanced tagline legibility, and refined filled logo proportions.
+                </div>
+            </div>
+
+            <div class="version-section">
                 <a href="santana-pier-logo/" class="logo-link">
                     Legacy Version
                 </a>
