--- a/index.html
+++ b/index.html
@@ -109,6 +109,15 @@
             </div>
 
             <div class="version-section">
+                <a href="https://vinicius5581.github.io/santana-pier-brand/santana-pier-logo/v0.0.5/" class="logo-link">
+                    Version 0.0.5
+                </a>
+                <div class="description">
+                    Refined layout focused on proportions: reduced circle size, simplified single-page layout, and precisely positioned center line for optimal text alignment without distractions.
+                </div>
+            </div>
+
+            <div class="version-section">
                 <a href="santana-pier-logo/" class="logo-link">
                     Legacy Version
                 </a>
