--- a/index.html
+++ b/index.html
@@ -118,6 +118,33 @@
             </div>
 
             <div class="version-section">
+                <a href="https://vinicius5581.github.io/santana-pier-brand/santana-pier-logo/v0.0.6/" class="logo-link">
+                    Version 0.0.6
+                </a>
+                <div class="description">
+                    Enhanced visual balance: reduced horizontal line thickness, scaled down circle by 15%, increased spacing between elements, improved tagline legibility with better weight and color contrast.
+                </div>
+            </div>
+
+            <div class="version-section">
+                <a href="https://vinicius5581.github.io/santana-pier-brand/santana-pier-logo/v0.0.7/" class="logo-link">
+                    Version 0.0.7
+                </a>
+                <div class="description">
+                    Final polish refinements: ultra-thin horizontal line (1.5px), enhanced tagline prominence with medium weight and darker color, pixel-perfect spacing for optimal visual hierarchy.
+                </div>
+            </div>
+
+            <div class="version-section">
+                <a href="https://vinicius5581.github.io/santana-pier-brand/santana-pier-logo/v0.0.8/" class="logo-link">
+                    Version 0.0.8
+                </a>
+                <div class="description">
+                    Optical refinement: adjusted center line position (76%) for improved visual alignment with tagline baseline, creating perfect optical balance between circle elements and text hierarchy.
+                </div>
+            </div>
+
+            <div class="version-section">
                 <a href="santana-pier-logo/" class="logo-link">
                     Legacy Version
                 </a>
